# crac-server

./: .gitignore  AGENTS.md  GEMINI.md  README.md  pyproject.toml  test_cover.py
crac_server/: REVISION_GUIDE.md  __init__.py  app.py  config.ini  config.py  logging.conf  ups.simulator
crac_server/component/: button_control.py
crac_server/component/camera/: __init__.py  camera.py  streaming.py
crac_server/component/camera/foscam/: camera.py
crac_server/component/camera/simulator/: camera.py
crac_server/component/camera/tapo/: camera.py
crac_server/component/cover_mirror/: __init__.py  cover_mirror_control.py
crac_server/component/curtains/: curtains.py  factory_curtain.py
crac_server/component/curtains/simulator/: curtains.py
crac_server/component/roof/: roof_control.py
crac_server/component/roof/simulator/: roof_control.py
crac_server/component/telescope/: telescope.py
crac_server/component/telescope/ascom_hub/: telescope.py
crac_server/component/ups/: __init__.py  ups.py
crac_server/component/weather/: __init__.py  weather.py
crac_server/converter/: button_converter.py  chart_builder.py  cover_mirror_converter.py  curtains_converter.py  roof_converter.py  telescope_converter.py  weather_converter.py
crac_server/handler/: button_handler.py  cover_mirror_handler.py  curtains_handler.py  handler.py  roof_converter.py  roof_handler.py  telescope_handler.py  weather_handler.py
crac_server/service/: button_service.py  camera_service.py  cover_mirror_service.py  curtains_service.py  geographic_service.py  image_config_service.py  roof_service.py  telescope_service.py  ups_service.py  weather_service.py
crac_server/static/: meteo_mock.json
tests/: __init__.py
tests/component/roof/: test_roof_control.py
tests/component/weather/: test_weather.py
tests/service/: test_weather_service.py
tests/unit/converter/: test_converters.py  test_weather_converter.py
tests/unit/service/: test_button_service.py  test_curtains_service.py
(+12 files in other folders)
