[tool.poetry]
name = "crac-server"
version = "0.1.0"
description = "Server for controlling the Dome and the Telescope"
authors = ["Alessio Caradossi <alessio@theeyes.org>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.9"
crac-protobuf = { git = "https://github.com/ara-astronomia/crac-protobuf", branch="fixed-path-file-proto" }
grpcio-tools = "^1.43.0"
gpiozero = "^2.0.1"
lgpio = "^0.2.2.0"
astropy = "^5.0.1"
# skyfield = "^1.42"
python-dotenv = "^0.20.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
coverage = "^6.3.2"
python-dateutil = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
